--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,21 +7,30 @@
         name="viewModel"
         type="com.rapidvaluetest.user.LoginViewModel" />
 </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:text="@string/app_name"
+            android:textSize="@dimen/text_size_large"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent">
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:text="@string/app_name"
-        android:textSize="@dimen/text_size_large"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -45,6 +54,7 @@
         android:paddingLeft="10dp"
         android:hint="@string/hint_username"
         android:inputType="textEmailAddress"
+        android:imeOptions="actionNext"
         app:addTextChangedListener="@{viewModel.getEmailTextWatcher}"/>
 
     <TextView
@@ -70,6 +80,7 @@
         android:paddingLeft="10dp"
         android:hint="@string/hint_password"
         android:inputType="textPassword"
+        android:imeOptions="actionDone"
         app:addTextChangedListener="@{viewModel.getPasswordTextWatcher}"/>
 
     <CheckBox
@@ -79,7 +90,8 @@
         app:layout_constraintTop_toBottomOf="@+id/etPassword"
         android:layout_marginTop="20dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:text="@string/title_remember_password"/>
+        android:text="@string/title_remember_password"
+        android:onClick="@{viewModel.onCheckedChanged}"/>
 
     <Button
         android:layout_width="wrap_content"
@@ -94,5 +106,7 @@
         android:textColor="@color/colorWhite"
         android:fontFamily="sans-serif-medium"
         android:onClick="@{viewModel::onClicked}"/>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </ScrollView>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
